--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,10 +1,10 @@
 name: NodeJS with Webpack
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  merge_group:
+    types: [checks_requested]
 
 jobs:
   build:
