--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,28 +1,18 @@
-name: NodeJS with Webpack
-
+name: GitHub Actions Vercel Preview Deployment
 on:
-  pull_request:
-    branches: [ "main" ]
-  merge_group:
-    types: [checks_requested]
-
+  push:
+    branches-ignore:
+      - main
 jobs:
-  build:
+  Deploy-Preview:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Build
-      run: |
-        npm install
-        npx webpack
+      - uses: actions/checkout@v3
+      - name: Install Vercel CLI
+        run: npm install --global vercel@canary
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token='DN04hhgqqBaK8hoN1IzQmb7Kb06qGvp3'
+      - name: Build Project Artifacts
+        run: vercel build --token='DN04hhgqqBaK8hoN1IzQmb7Kb06qGvp3'
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token='DN04hhgqqBaK8hoN1IzQmb7Kb06qGvp3'
